# med-bot

./: .env  .env.dev  Cargo.toml
.cargo/: config.toml
med-bot-service/: Cargo.toml  README.md
med-bot-service/.cargo/: config.toml
med-bot-service/config/: .env.dev  .env.local
med-bot-service/src/: main.rs  scheduler.rs
med-bot-service/src/config/: mail_config.rs  med_target_config.rs  mod.rs  mongo_config.rs
med-bot-service/src/dto/: appointment_model.rs  mod.rs  search_model.rs
med-bot-service/src/handlers/: med_handler.rs  mod.rs
med-bot-service/src/models/: doctor_appointment.rs
med-bot-service/src/repositories/: doctor_repository.rs  user_repository.rs
med-bot-service/src/services/: mail_service.rs  med_service.rs
project/: Makefile  docker-compose.yml
project/docker/: Dockerfile
src/: main.rs  scheduler.rs
src/config/: config.rs  mail_config.rs  med_target_config.rs  mod.rs  mongo_config.rs
src/handlers/: med_handler.rs
src/models/: appointment_model.rs  doctor_appointment.rs  documents.rs  mod.rs  search_model.rs
src/repositories/: doctor_repository.rs  mod.rs
src/services/: mail_service.rs  med_service.rs  mod.rs
