[package]
name = "med-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-rt="2.10"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

#cron
cron = "0.12.1"
chrono = { version = "0.4.19",features=['time']}

#mail
lettre = "0.11.9"
lettre_email = "0.9"

mongodb = "3"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15.0"

[[bin]]
name = "med-bot"
path = "src/main.rs"